# Tetris-Clone

./: Makefile  tetris.cpp
linux/: Makefile
mingw32-w64/: Makefile
src/: CMakeLists.txt  tetris.cpp
